--- a/catalog/view/theme/default/template/product/manufacturer_info.twig
+++ b/catalog/view/theme/default/template/product/manufacturer_info.twig
@@ -153,6 +153,15 @@
                 <a href="{{ product.href }}" class="is-flex is-justify-content-center">
                   <img src="{{ product.thumb }}" loading="lazy" alt="{{ product.name }}" title="{{ product.name }}" />
                   <span class="tag {{ product.quantity ? 'is-success' : 'is-danger' }} is-light stock">{{ product.stock }}</span>
+                  {% if product.stickers %}
+                  <span class="stickers is-block mb-0">
+                  {% for sticker in product.stickers %}
+                    <span class="is-block mb-1">
+                      <span class="{{ sticker.class }}">{{ sticker.content|html_entity_decode }}</span>
+                    </span>                    
+                  {% endfor %}
+                  </span>
+                  {% endif %}
                 </a>
               </div>
               <div class="caption">
